Fix linter error

--- a/styles.css
+++ b/styles.css
@@ -411,11 +411,11 @@
 }
 
 .language-detail .get-resume button:enabled {
-  background: #36B37F;
+  background: #36b37f;
 }
 
 .language-detail .get-resume:hover {
-  background: #36B37F;
+  background: #36b37f;
 }
 
 .back-image-2 {
