--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;");
 
 * {
   margin: 0;
@@ -25,7 +25,7 @@
 
 .logo {
   background-repeat: no-repeat;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -72,7 +72,7 @@
 }
 
 .primary-headline h1 {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 40px;
   align-self: start;
   line-height: 52px;
@@ -90,7 +90,7 @@
 }
 
 .supporting-text {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -130,7 +130,7 @@
 }
 
 .primary-text {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -243,7 +243,7 @@
 
 .project-detail h4 {
   background: #fff;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
@@ -258,11 +258,7 @@
 }
 
 .project-detail ul {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   padding: 0;
-  gap: 2px;
   width: 305px;
   height: 32px;
   background: #fff;
@@ -270,10 +266,11 @@
 }
 
 .project-detail li {
+  float: left;
   padding: 8px 12px;
   border-radius: 4px;
   border: none;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
@@ -292,7 +289,7 @@
   border: none;
   border-radius: 4px;
   align-items: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -346,7 +343,7 @@
 .about-primary-text h3 {
   display: flex;
   flex-direction: row;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -357,7 +354,7 @@
 }
 
 .about-supporting-text {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -385,7 +382,7 @@
   background: #36b37f;
   border: none;
   border-radius: 4px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -478,7 +475,7 @@
 }
 
 .language-detail h4 {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
