change to index.html and styles.css

--- a/styles.css
+++ b/styles.css
@@ -694,3 +694,326 @@
   height: 34px;
   left: calc(50% - 375px / 2);
 }
+
+.deskto-line {
+  display: none;
+}
+ 
+/*Desktop Version*/
+
+@media screen and (min-width: 768px) {
+
+  .navigation {
+    display: none;
+  }
+
+  .toolbar-container
+  {
+    display: none;
+  
+  }
+  .primary-headline
+  {
+    display: none;
+  
+  }
+
+  .back-image {
+    display: none;
+  }
+
+  .desktop-image {
+    background-image: url(image/Header-llustration-desktop@2x.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    width: 1542px;
+    height: 1000px;
+  } 
+
+.desktop-nav {
+  margin: auto;
+  height: 72px;
+  top: 0px;
+}
+
+.menu-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 24px;
+    padding-top: 16px;
+    list-style: none;
+  }
+
+  .desktop-nav a {
+    color: #000;
+    text-decoration: none;
+  }
+
+  .toolbar-container {
+    display:none;
+  }
+
+  .headline-desk-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 120px 0px;
+    position: absolute;
+    left: 400px;
+    top: 80px;
+    margin: auto;
+  }
+  
+  #desktop-headline h1{
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.37px;
+    color: #172B4D;
+    width: 725px;
+    height: 114px;
+    padding-bottom: 24px;
+  }
+
+  #desktop-headline p {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    color: #172B4D;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    width: 725px;
+    height: 96px;
+    padding-bottom: 34px;
+  }
+
+  .h1color {
+    color: rgb(59, 200, 122);
+  }
+
+  .supporting-text {
+    display: none;
+  }
+
+  #desktop-socialt {
+    width: 170.17px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: auto;
+  }
+
+  .socialt {
+    display: none;
+  }
+
+  #scroll {
+    width: 60px;
+    height: 114px;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: auto;
+  }
+  
+.headline back-image
+{
+  display: none;
+}
+
+#desktop-recent-works {
+  width: 1200PX;
+  height: 100%;
+}
+
+#desktop-primary-text h3 {
+  padding-top: 58px;
+  margin-left: 300px;
+}
+
+.projects {
+  margin: auto;
+  padding-top: 58px;
+  padding-left: 0%;
+}
+
+.indicator {
+  display: none;
+}
+
+#desktop-projects {
+  grid-template-columns: repeat(3, 1fr);
+  width: 75%;
+}
+
+.about {
+ width: 1200px; 
+height: 100%; 
+}
+
+.about-supporting-text {
+  width: 770px;
+}
+
+.back-image-3 {
+  background-image: url(image/illustration-about\ me-1-desktop@2x.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  left: 1200px;
+  width: 269px;
+  height: 244px;
+  margin-top: -90px;
+} 
+
+.back-image-2 {
+  background-image: url(image/illustration-about-me-2-desktop@2x.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width:1400px;
+  height:100px;
+  margin-top:50px;
+} 
+
+#desktop-about-cards {
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1200px;
+  margin-left: 0px;
+}
+
+.contact {
+  position:absolute;
+  display: flex;
+  flex-direction: row;
+  width:1400px;
+  height: inherit;
+  margin-top: 700px;
+}
+
+.contact h3 {
+  width: 40%;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 52px; 
+  align-items: center;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  width: 50%;
+  height: 330px;
+}
+
+.form-input {
+  display: none;
+}
+
+.desktop-form-input {
+  display: block;
+}
+
+.first-and-last {
+display: flex;
+gap: 24px;
+width:700px;
+}
+ 
+#fristname {
+  width: 330px;
+  height: 48px;
+  box-sizing: border-box;
+  background: #fff;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  padding: 15px 15px;
+  margin-bottom: 24px;
+  height: inherit;
+  
+}
+#lastname {
+  width: 330px;
+  height: 48px;
+  box-sizing: border-box;
+  background: #fff;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  padding: 15px 15px;
+  margin-bottom: 24px;
+  height: inherit;
+}
+
+#email {
+  width: 684px;
+}
+
+#message {
+  box-sizing: border-box;
+  width:684px;
+  height: 114px;
+  background: #fff;
+  border: 1px solid #60c095;
+  border-radius: 4px;
+  padding: 15px 15px;
+}
+
+.get-in-touch-btn {
+  align-items: self-start;
+}
+
+.back-img4 {
+  background-image: url(image/bottom-pics.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 107%;
+  height: 100%;
+  top: 400px;
+  left: 0px;
+}
+
+.footer-section {  
+position: absolute;
+width: 155%;
+left: 0px;
+top: 4000px;
+}
+
+.contact-social {
+display: flex;
+flex-direction: row;
+align-items: center;
+position: absolute;
+width: 200px;
+height: 40px;
+left: 620px;
+top: 16px;
+}
+
+.socialt {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 24px;
+}
+
+.footer-email #contact-email {
+  display: none;
+}
+
+#footer-image {
+  display: none;
+}
+
+}
+
