--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .desktop-nav {
   display: none;
 }
@@ -262,7 +266,11 @@
 }
 
 .project-detail ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   padding: 12px;
+  gap: 3px;
   width: 305px;
   height: 32px;
   background: #fff;
@@ -310,7 +318,7 @@
   align-items: center;
   padding-top: 24px;
   padding-bottom: 24px;
-  gap: 2px;
+  gap: 4px;
   width: 305px;
   height: 48px;
   background: #fff;
@@ -404,7 +412,7 @@
 
 .language-detail .get-resume:active {
   color: #dfe1e6;
-  background: #52bee9;
+  background: #C5E9DA;
 }
 
 .language-detail .get-resume:visited {
@@ -660,15 +668,16 @@ hr {
 
 .form-section .form-btn:active {
   color: #dfe1e6;
-  background: #52bee9;
+  background: #008552;
 }
 
 .form-section .form-btn button:enabled {
-  background: #172b4d;
+  background: #36b37f;
 }
 
 .form-section .form-btn:hover {
-  background: #1dc9df;
+  background: #c5e9da;
+  ;
 }
 
 .contact-social {
@@ -703,7 +712,7 @@ hr {
   left: calc(50% - 375px / 2);
 }
 
-.deskto-line {
+.desktop-line {
   display: none;
 }
 
@@ -723,9 +732,11 @@ hr {
   .desktop-image {
     background-image: url(image/Header-llustration-desktop@2x.png);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    width: 1542px;
+    background-size: contain;
+    width: 1372.8px;
     height: 1000px;
+    /* left: 27px; */
+    /* top: -398px; */
   }
 
   .desktop-nav {
@@ -738,10 +749,10 @@ hr {
   .menu-bar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     column-gap: 24px;
     padding-top: 16px;
     list-style: none;
+    margin-left: 550px;
   }
 
   .desktop-nav a {
@@ -757,11 +768,15 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 120px 1px;
+    padding: 120px 0px;
     position: absolute;
-    left: 400px;
+    /* left: 400px;
     top: 80px;
-    margin: auto;
+    margin: auto; */
+    width: 820px;
+    left: 260px;
+    top: 72px;
+    padding: 180px 0px 180px 0px;
   }
 
   #desktop-headline h1 {
@@ -775,6 +790,8 @@ hr {
     color: #172b4d;
     width: 725px;
     height: 114px;
+    top: 160px;
+    border-radius: nullpx;
     padding-bottom: 24px;
   }
 
@@ -789,8 +806,10 @@ hr {
     flex: none;
     order: 1;
     flex-grow: 0;
-    width: 725px;
     height: 96px;
+    width: 725px;
+    top: 298px;
+    border-radius: nullpx;
     padding-bottom: 34px;
   }
 
@@ -829,19 +848,57 @@ hr {
   }
 
   #desktop-recent-works {
-    width: 1200px;
-    height: 100%;
+    height: 1244px;
+    width: 1171px;
+    top: 1059px;
+    padding: 80px 0px 80px 0px;
+    align-items: center;
   }
 
   #desktop-primary-text h3 {
-    padding-top: 58px;
-    margin-left: 300px;
+    height: 48px;
+    width: 447px;
+    margin-left: 447px;
+    width: 447px;
+    height: 48px;
+    text-align: center;
   }
 
-  .projects {
-    margin: auto;
-    padding-top: 58px;
-    padding-left: 0%;
+  .project1:nth-child(1) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
+
+  }
+
+  .project2:nth-child(2) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .project3:nth-child(3) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .project4:nth-child(4) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .project5:nth-child(5) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .project6:nth-child(6) {
+    width: 365px;
+    margin-left: 1px;
+    margin-right: 1px;
   }
 
   .indicator {
@@ -850,58 +907,82 @@ hr {
 
   #desktop-projects {
     grid-template-columns: repeat(3, 1fr);
-    width: 75%;
+    /* width:70%; */
+    height: 988px;
+    width: 1171px;
+    top: 176px;
+    gap: 24px;
+    margin-left: 100px;
   }
 
-  .about {
-    width: 1200px;
-    height: 100%;
+  /* .about {
+    width: 920px;
+    height: 808px;
+    padding-left: 20px;
+  } */
+
+  .about-primary-text h3 {
+    width: 447px;
+    justify-content: center;
+    padding-left: 160px;
   }
 
   .about-supporting-text {
-    width: 770px;
+    width: 720px;
+    margin-left: 160px;
+  }
+
+  .button-resume {
+    margin-left: 160px;
   }
 
   .back-image-3 {
     background-image: url(image/illustration-about\ me-1-desktop@2x.png);
     background-size: contain;
     background-repeat: no-repeat;
-    left: 1200px;
+    left: 1107px;
     width: 269px;
     height: 244px;
-    margin-top: -90px;
+    margin-top: -100px;
   }
 
   .back-image-2 {
     background-image: url(image/illustration-about-me-2-desktop@2x.png);
-    background-size: contain;
+    background-size: 19%;
     background-repeat: no-repeat;
-    width: 1400px;
+    width: 1171px;
     height: 100px;
     margin-top: 50px;
   }
 
   #desktop-about-cards {
     grid-template-columns: 1fr 1fr 1fr;
-    width: 1200px;
-    margin-left: 1px;
+    width: 1171px;
+    margin-left: 200px;
+  }
+
+  .language-detail {
+    width: 369px;
+    height: 352px;
   }
 
   .contact {
     position: absolute;
     display: flex;
     flex-direction: row;
-    width: 1400px;
-    height: inherit;
+    width: 1171px;
+    height: 500px;
     margin-top: 700px;
+    margin-left: 60px;
   }
 
-  .contact .h3 {
-    width: 40%;
+  .contact h3 {
+    width: 463px;
+    height: 256px;
+    align-items: self-start;
     font-weight: 700;
     font-size: 30px;
     line-height: 58px;
-    align-items: center;
   }
 
   .form-section {
@@ -937,34 +1018,35 @@ hr {
 
   .back-img4 {
     background-image: url(image/bottom-pics.png);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-    width: 107%;
-    height: 100%;
-    top: 400px;
+    width: 1372.8px;
+    height: 1000px;
     left: 1px;
+    top: 3700px;
   }
 
   .footer-section {
     position: absolute;
-    width: 155%;
+    width: 100%;
     left: 1px;
-    top: 4000px;
+    top: 4200px;
+    height: 42%;
   }
 
   .contact-social {
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    position: absolute;
-    width: 200px;
-    height: 40px;
-    left: 620px;
-    top: 16px;
+    width: 1200px; 
+  }
+
+  .desktop-line {
+    display: block;
+    height: 35px;
   }
 
   hr {
     display: block;
+    width: 1300px;
   }
 
   .footer-section .socialt {
