Fix linter error

--- a/styles.css
+++ b/styles.css
@@ -49,15 +49,15 @@ body {
 }
 
 .hidden-menu {
-  position: fixed;
+  position: absolute;
   height: 755px;
   width: 375px;
   left: -100%;
-  top: 70px;
-} 
+  top: -70px;
+}
 
 .menu-list {
-  background-color: white; 
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 108px 28px;
@@ -527,7 +527,7 @@ body {
   margin-top: 40px;
   margin-right: 50%;
   margin-left: 123px;
-  margin-bottom: 1px auto;
+  margin-bottom: 1px;
   left: calc(50% - 80px / 2 + 0.5px);
   top: calc(50% - 80px / 2);
 }
@@ -857,9 +857,6 @@ hr {
     line-height: 32px;
     text-align: center;
     color: #172b4d;
-    flex: none;
-    order: 1;
-    flex-grow: 0;
     height: 96px;
     width: 725px;
     top: 298px;
