--- a/styles.css
+++ b/styles.css
@@ -61,11 +61,11 @@ body {
   position: absolute;
   width: 134px;
   height: 5px;
-  left: calc(35% - 134px / 2 - 0.5px);
+  left: calc(40% - 134px / 2 - 0.5px);
   bottom: 8px;
   background: #0d151e;
   border-radius: 10px;
-  top: 650px;
+  top: 760px;
 }
 
 .menu-list {
@@ -201,6 +201,7 @@ body {
 .recent-works-container {
   display: grid;
   width: 379px;
+  padding-top: 30px;
   align-items: center;
   margin: auto;
   margin-left: 0%;
@@ -225,7 +226,7 @@ body {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(768px, 1fr 1fr 1fr));
+  grid-template-columns: repeat(2, minmax(768px, 1fr 1fr 1fr));
   align-items: center;
   gap: 24px;
   width: 331px;
