--- a/styles.css
+++ b/styles.css
@@ -226,7 +226,7 @@ body {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(2, 1fr 1fr 1fr);
+  grid-template-columns: repeat(auto-fill, 1fr);
   align-items: center;
   gap: 24px;
   width: 331px;
