--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ body {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(1fr);
+  grid-template-columns: 1fr;
   align-items: center;
   gap: 24px;
   width: 331px;
@@ -871,7 +871,6 @@ hr {
     line-height: 32px;
     text-align: center;
     color: #172b4d;
-    /* height: 96px; */
     width: 725px;
     top: 298px;
     border-radius: 8px;
