--- a/styles.css
+++ b/styles.css
@@ -870,6 +870,7 @@ hr {
     text-align: center;
     color: #172b4d;
     top: 298px;
+    width: 437px;
     border-radius: 8px;
     padding-bottom: 34px;
   }
