--- a/styles.css
+++ b/styles.css
@@ -859,6 +859,8 @@ hr {
     top: 160px;
     border-radius: 8px;
     padding-bottom: 24px;
+    animation: float 5s;
+
   }
 
   #desktop-headline p {
