--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -31,6 +30,7 @@ body {
 }
 
 .logo {
+  background-repeat: no-repeat;
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -41,6 +41,7 @@ body {
 .toolbar-container a {
   text-decoration: none;
   font-size: 30px;
+  display: block;
   color: #28352f;
 }
 
@@ -50,7 +51,7 @@ body {
 
 .hidden-menu {
   position: absolute;
-  height: 755px;
+  height: 812px;
   width: 375px;
   left: -100%;
   top: -70px;
@@ -68,6 +69,11 @@ body {
   top: 760px;
 }
 
+.shape {
+  background: #8cb9ed;
+  border-radius: solid 10px;
+}
+
 .menu-list {
   background-color: white;
   display: flex;
@@ -77,8 +83,8 @@ body {
   list-style: none;
   width: 100%;
   height: 100vh;
-  left: 12px;
-  top: 92px;
+  /* left: 12px; */
+  /* top: 92px; */
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -94,7 +100,7 @@ body {
 }
 
 .nav-link {
-  width: 351px;
+  width: 345px;
   height: 56px;
   border-radius: 8px;
   text-decoration: none;
@@ -111,11 +117,9 @@ body {
 .close {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
   padding-top: 45px;
-  width: 327px;
-  height: 40px;
-  top: calc(10% - 35px / 2);
+  height: 0px;
+  top: calc(50% - 35px / 2);
   border-radius: 8px;
   justify-content: flex-end;
 }
@@ -176,7 +180,6 @@ body {
   text-align: center;
   width: 327px;
   height: 164px;
-  padding-left: 12px;
 }
 
 .socialt {
@@ -197,11 +200,13 @@ body {
   align-self: center;
 }
 
+/* -- Project and About Section-- */
+
 .recent-works-container {
   display: grid;
   width: 379px;
-  padding-top: 30px;
   align-items: center;
+  padding-top: 30px;
   margin: auto;
   margin-left: 0%;
 }
@@ -225,7 +230,7 @@ body {
 
 .projects {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(768px, 1fr 1fr 1fr));
   align-items: center;
   gap: 24px;
   width: 331px;
@@ -539,7 +544,7 @@ body {
   margin-top: 40px;
   margin-right: 50%;
   margin-left: 123px;
-  margin-bottom: 1px;
+  margin-bottom: 0 auto;
   left: calc(50% - 80px / 2 + 0.5px);
   top: calc(50% - 80px / 2);
 }
@@ -857,7 +862,7 @@ hr {
     width: 725px;
     height: 114px;
     top: 160px;
-    border-radius: 8px;
+    border-radius: nullpx;
     padding-bottom: 24px;
     animation: float 3s alternate-reverse;
     animation-delay: 0.5s;
@@ -869,7 +874,7 @@ hr {
       opacity: 0;
     }
   }
-
+  
   #desktop-headline p {
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -878,6 +883,13 @@ hr {
     line-height: 32px;
     text-align: center;
     color: #172b4d;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    height: 96px;
+    width: 725px;
+    top: 298px;
+    border-radius: nullpx;
     padding-bottom: 34px;
   }
 
