--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,6 @@ body {
   list-style: none;
   width: 100%;
   height: 100vh;
-  /* left: 12px; */
-  /* top: 92px; */
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
@@ -118,7 +116,7 @@ body {
   display: flex;
   flex-direction: row;
   padding-top: 45px;
-  height: 0px;
+  height: 0;
   top: calc(50% - 35px / 2);
   border-radius: 8px;
   justify-content: flex-end;
@@ -874,7 +872,7 @@ hr {
       opacity: 0;
     }
   }
-  
+
   #desktop-headline p {
     font-family: 'Inter', sans-serif;
     font-style: normal;
