--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,11 @@ body {
 }
 
 .menu-footer {
- /* ..... */
+  background-color: #e5e5e5;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  margin-top: 165px;
+  height: 57px;
 }
 
 .menu-list {
